fix fullName align

--- a/client/src/components/Posts/Post/Post.module.scss
+++ b/client/src/components/Posts/Post/Post.module.scss
@@ -21,6 +21,7 @@
         min-width: 10%;
         padding: 1rem;
         margin: 0 2rem;
+        @include flexbox(center, center, column);
         p {
           padding: 1rem;
         }
